<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.markesilva.alexandria.AddBook">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:id="@+id/eancontainer"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/addbook_outside_margin"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minEms="@integer/ean_width"
                android:id="@+id/ean"
                android:saveEnabled="true"
                android:maxLength="@integer/ean_size"
                android:maxLines="1"
                android:hint="@string/input_hint"
                android:paddingRight="@dimen/addbook_inside_margin"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_button"
                android:id="@+id/scan_button"/>

        </LinearLayout>

        <com.markesilva.alexandria.CameraPreview.CameraSourcePreview
            android:id="@+id/scanner_window"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/eancontainer"
            android:layout_marginLeft="@dimen/scanner_margins"
            android:layout_marginStart="@dimen/scanner_margins"
            android:layout_marginRight="@dimen/scanner_margins"
            android:layout_marginEnd="@dimen/scanner_margins"
            android:layout_marginBottom="@dimen/scanner_margins"
            android:visibility="invisible"
            >

            <com.markesilva.alexandria.CameraPreview.GraphicOverlay
                android:id="@+id/barcode_overlay"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                />

        </com.markesilva.alexandria.CameraPreview.CameraSourcePreview>

        <TextView
            style="@style/addbook_title_theme"
            android:id="@+id/no_network_description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/addbook_outside_margin"
            android:layout_below="@+id/eancontainer"
            android:layout_alignLeft="@+id/eancontainer"
            android:layout_alignStart="@+id/eancontainer"
            android:layout_alignRight="@+id/eancontainer"
            android:layout_alignEnd="@+id/eancontainer"
            android:text="@string/no_network_description"
            android:visibility="invisible"
            />

        <TextView
            style="@style/addbook_title_theme"
            android:id="@+id/bookTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:layout_marginTop="@dimen/addbook_outside_margin"
            android:layout_below="@+id/eancontainer"
            android:layout_alignLeft="@+id/eancontainer"
            android:layout_alignStart="@+id/eancontainer"
            android:layout_alignRight="@+id/eancontainer"
            android:layout_alignEnd="@+id/eancontainer"
            tools:text="Title"
            />

        <TextView
            style="@style/addbook_subtitle_theme"
            android:id="@+id/bookSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/addbook_inside_margin"
            android:layout_below="@+id/bookTitle"
            android:maxLines="3"
            android:ellipsize="end"
            android:layout_alignLeft="@+id/eancontainer"
            android:layout_alignStart="@+id/eancontainer"
            android:layout_alignRight="@+id/eancontainer"
            android:layout_alignEnd="@+id/eancontainer"
            tools:text="subtitle"
            />

        <TextView
            style="@style/addbook_authors_theme"
            android:id="@+id/authors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginTop="@dimen/addbook_inside_margin"
            android:layout_below="@+id/bookSubTitle"
            android:layout_alignRight="@+id/eancontainer"
            android:layout_alignEnd="@+id/eancontainer"
            tools:text="Authors"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bookCover"
            android:contentDescription="@string/book_cover"
            android:layout_alignTop="@+id/authors"
            android:layout_alignLeft="@+id/eancontainer"
            android:layout_alignStart="@+id/eancontainer"
            tools:src="@drawable/ic_launcher"
            />

        <TextView
            style="@style/addbook_categories_theme"
            android:id="@+id/categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bookCover"
            android:layout_marginTop="@dimen/addbook_inside_margin"
            android:layout_alignLeft="@+id/eancontainer"
            android:layout_alignStart="@+id/eancontainer"
            tools:text="Categories"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/addbook_button_height"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/cancel_button"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/delete_button"
                android:drawableLeft="@drawable/ic_action_discard"
                android:visibility="invisible"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/ok_button"
                android:visibility="invisible"
                android:layout_weight="1"
                android:id="@+id/save_button"
                android:drawableLeft="@drawable/ic_action_accept"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_gravity="bottom"
                />

        </LinearLayout>

    </RelativeLayout>
</FrameLayout>
