<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.markesilva.alexandria.AddBook">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <ScrollView android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:fillViewport="false"
                    android:layout_weight="1">

            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top">

                <TextView
                    style="@style/book_title_theme"
                    android:id="@+id/fullBookTitle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:layout_marginTop="@dimen/book_outside_margin"
                    android:layout_marginLeft="@dimen/book_outside_margin"
                    android:layout_marginStart="@dimen/book_outside_margin"
                    android:layout_marginRight="@dimen/book_outside_margin"
                    android:layout_marginEnd="@dimen/book_outside_margin"
                    android:layout_alignParentTop="true"
                    tools:text="Title"
                    />

                <ImageView
                    android:id="@+id/fullBookCover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/book_cover"
                    android:layout_marginTop="@dimen/book_inside_margin"
                    android:layout_below="@+id/fullBookTitle"
                    android:layout_alignLeft="@+id/fullBookTitle"
                    android:layout_alignStart="@+id/fullBookTitle"
                    tools:src="@drawable/ic_launcher"
                    />

                <TextView
                    style="@style/book_subtitle_theme"
                    android:id="@+id/fullBookSubTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="5"
                    android:ellipsize="end"
                    android:layout_marginLeft="@dimen/book_inside_margin"
                    android:layout_marginRight="@dimen/book_inside_margin"
                    android:layout_alignTop="@+id/fullBookCover"
                    android:layout_toRightOf="@+id/fullBookCover"
                    android:layout_toEndOf="@+id/fullBookCover"
                    tools:text="subtitle"
                    />


                <TextView
                    style="@style/book_description_theme"
                    android:id="@+id/fullBookDesc"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:layout_marginTop="@dimen/book_inside_margin"
                    android:layout_marginLeft="@dimen/book_outside_margin"
                    android:layout_marginStart="@dimen/book_outside_margin"
                    android:layout_below="@+id/fullBookCover"
                    android:layout_marginRight="@dimen/book_inside_margin"
                    android:layout_marginEnd="@dimen/book_inside_margin"
                    tools:text="description"
                    />


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fullBookDesc"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="@dimen/book_outside_margin"
                    android:layout_marginStart="@dimen/book_outside_margin"
                    android:layout_marginRight="@dimen/book_outside_margin"
                    android:layout_marginEnd="@dimen/book_outside_margin"
                    >

                    <TextView
                        style="@style/book_categories_theme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/categories"
                        android:layout_weight="1"
                        android:gravity="left|top"
                        tools:text="categories"
                        />

                    <TextView
                        style="@style/book_authors_theme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/authors"
                        android:layout_weight="1"
                        android:textStyle="bold"
                        android:gravity="right|top"
                        tools:text="authors"
                        />
                </LinearLayout>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/back_button"
                    android:id="@+id/backButton"
                    android:onClick="goBack"
                    android:src="@drawable/ic_action_undo"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_gravity="right|top"
                    android:layout_alignParentTop="true"
                    android:layout_alignRight="@+id/fullBookTitle"
                    android:layout_alignEnd="@+id/fullBookTitle"/>


            </RelativeLayout>

        </ScrollView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/delete_button"
                android:drawableLeft="@drawable/ic_action_discard"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>

    </LinearLayout>


</FrameLayout>
